--- a/.gitignore
+++ b/.gitignore
@@ -6718,3 +6718,4 @@ node_modules/yallist/LICENSE
 node_modules/yallist/package.json
 node_modules/yallist/README.md
 node_modules/yallist/yallist.js
+unpackage/dist/cache/.vite/deps/mitt.js
